--- a/JavaScriptApps/IndivLendHome.html
+++ b/JavaScriptApps/IndivLendHome.html
@@ -831,10 +831,10 @@ $(document).ready(function() {
     <div id="formerrors"></div>
 
 	<input type="hidden" id="dateFormat" name="dateFormat" value="dd MMMM yyyy" />
-	<label for="eventDate">On:</label>
+	<label for="eventDate">{{=$ctx.doI18N("label.loan.on")}}</label>
 	<input id="eventDate" name="eventDate" title="" class="datepickerfield" />
 
-	<label for="note">Note:</label>
+	<label for="note">{{=$ctx.doI18N("label.loan.action.note")}}</label>
 	<textarea rows="3" cols="53" id="note" name="note"></textarea>
 </form>
 </script>
@@ -843,7 +843,7 @@ $(document).ready(function() {
 <form id="entityform">
     <div id="formerrors"></div>
 
-	<label for="note">Note:</label>
+	<label for="note">{{=$ctx.doI18N("label.loan.action.note")}}</label>
 	<textarea rows="6" cols="53" id="note" name="note"></textarea>
 </form>
 </script>
@@ -855,13 +855,13 @@ $(document).ready(function() {
 	<input type="hidden" id="dateFormat" name="dateFormat" value="dd MMMM yyyy" />
 	<input type="hidden" id="locale" name="locale" value="{{=$ctx.currentLocale()}}" />
 
-	<label for="transactionDate">Repayment on:</label>
+	<label for="transactionDate">{{=$ctx.doI18N("label.loan.transaction.on")}}</label>
 	<input id="transactionDate" name="transactionDate" class="text ui-widget-content ui-corner-all datepickerfield" title=""d value="{{=$ctx.globalDate(date)}}"/>
 
-	<label for="transactionAmount">Amount:</label>
+	<label for="transactionAmount">{{=$ctx.doI18N("label.loan.transaction.amount")}}</label>
 	<input id="transactionAmount" name="transactionAmount" class="text ui-widget-content ui-corner-all" title="" value="{{=$ctx.money(total)}}" />
 
-	<label for="note">Note:</label>
+	<label for="note">{{=$ctx.doI18N("label.loan.action.note")}}</label>
 	<textarea rows="3" cols="53" id="note" name="note" class="text ui-widget-content ui-corner-all"></textarea>
 </form>
 </script>
